Add elements to header section

--- a/style.css
+++ b/style.css
@@ -1,165 +1,5 @@
 *, *::before, *::after {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-
-.diagonal-box {
-  min-height: 500px;
-  transform: skewY(-6deg);
-  transform-origin: top left;
-  background: #06b6d4;
-}
-
-header > img, header > div {
-  box-shadow: 0 0 3px #00000080;
-}
-
-header > img {
-  position: absolute;
-  top: 5%;
-  left: 5%;
-  width: auto;
-  max-height: 425px;
-  z-index: 2;
-}
-
-.name {
-  position: absolute;
-  top: 375px;
-  left: 175px;
-  z-index: 3;
-  font-size: 3rem;
-}
-
-.about-me {
-  max-width: 400px;
-  min-height: 300px;
-  position: absolute;
-  top: 10%;
-  left: 27%;
-  z-index: 1;
-  background: #FFF;
-  padding: 24px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-h1 {
-  font-family: "Playfair Display";
-}
-
-p {
-  font-family: "Roboto";
-}
-
-.about-me > div {
-  align-self: flex-end;
-  display: flex;
-  gap: 16px;
-  font-size: 1.5rem;
-}
-
-main {
-  padding: 96px;
-}
-
-main > h1 {
-  padding-bottom: 16px;
-}
-
-.projects {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 42px;
-}
-
-.card {
-  box-shadow: 0 0 3px #00000080;
-}
-
-.card  h1 {
-  text-align: center;
-  padding: 112px 12px;
-  color: #FFF;
-  font-size: 2.75rem;
-}
-
-.one {
-  background: darkred;
-}
-
-.two {
-  background: darkorchid;
-}
-
-.three {
-  background: darkgreen;
-}
-
-.four {
-  background: violet;
-}
-
-.five {
-  background: goldenrod;
-}
-
-.six {
-  background: lightskyblue;
-}
-
-.inner-div-two {
-  padding: 0 24px 64px;
-}
-
-.inner-div-two > div {
-  display: flex;
-  justify-content: space-between;
-  padding: 12px 0;
-}
-
-.inner-div-two > div > p {
-  font-family: "Playfair Display";
-}
-
-.project-icons {
-  display: flex;
-  gap: 16px;
-  font-size: 1.15rem;
-}
-
-@media (max-width: 600px) {
-  header > img {
-    left: 50%;
-    transform: translateX(-50%);
-  }
-
-  .name {
-    top: 325px;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-
-  .about-me {
-    position: static;
-    box-shadow: none;
-    margin: 0 auto;
-  }
-
-  .about-me > div, .about-me > h1 {
-    align-self: center;
-  }
-
-  main {
-    padding: 24px;
-  }
-
-  main > h1 {
-    text-align: center;
-  }
-
-  .projects {
-    grid-template-columns: repeat(1, 1fr);
-  }
 }
