--- a/style.css
+++ b/style.css
@@ -3,3 +3,83 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+h1, h2 {
+  font-family: "Playfair Display", sans-serif;
+  font-weight: 100;
+}
+
+.header {
+  background: linear-gradient(155deg, #06b6d4 35%, #FFF 35%);
+  padding: 25px 0 50px;
+}
+
+.container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.img-container {
+  position: relative;
+}
+
+.img-container img {
+  width: 100%;
+}
+
+.float {
+  display: none;
+}
+
+.name {
+  color: #FFF;
+  position: absolute;
+  bottom: 0.5rem;
+  left: 0.5rem;
+  width: 100%;
+  text-align: center;
+  font-size: 3.25rem;
+  text-shadow: 2px 3px 2px rgba(0,0,0, 0.5);
+}
+
+.about-me {
+  margin-top: 3rem;
+}
+
+.about-me h2,
+.icons {
+  text-align: center;
+}
+
+.about-me h2 {
+  font-size: 2.25rem;
+  margin-bottom: 1rem;
+}
+
+.about-me p {
+  font-size: 1.3125rem;
+  margin-bottom: 1rem;
+  color: #0000009c;
+}
+
+.icons a {
+  font-size: 2rem;
+  color: #000;
+  text-decoration: none;
+  margin-right: .5rem;
+}
+
+@media (min-width: 460px) {
+  .name {
+    font-size: 5rem;
+  }
+
+  .about-me h2 {
+    font-size: 3.25rem;
+  }
+}
