--- a/style.css
+++ b/style.css
@@ -13,12 +13,16 @@ h1, h2 {
   font-weight: 100;
 }
 
-.header {
-  background: linear-gradient(155deg, #06b6d4 35%, #FFF 35%);
-  padding: 25px 0 50px;
+h2 {
+  font-size: 2.25rem;
 }
 
-.container {
+.header {
+  background: linear-gradient(155deg, #06b6d4 35%, #FFF 35%);
+  padding: 25px 0 100px;
+}
+
+.container, .projects-container {
   width: 90%;
   max-width: 1200px;
   margin: 0 auto;
@@ -51,13 +55,12 @@ h1, h2 {
   margin-top: 3rem;
 }
 
-.about-me h2,
+h2,
 .icons {
   text-align: center;
 }
 
 .about-me h2 {
-  font-size: 2.25rem;
   margin-bottom: 1rem;
 }
 
@@ -79,7 +82,7 @@ h1, h2 {
     font-size: 5rem;
   }
 
-  .about-me h2 {
+  h2 {
     font-size: 3.25rem;
   }
 }
@@ -119,12 +122,16 @@ h1, h2 {
     padding: 40px 25px;
   }
 
-  .about-me h2 {
+  h2 {
     font-size: 2.25rem;
   }
 
   .icons {
     display: none;
+  }
+
+  .projects-container > h2 {
+    text-align: left;
   }
 }
 
@@ -155,7 +162,7 @@ h1, h2 {
     align-self: center;
   }
 
-  .about-me h2 {
+  h2 {
     font-size: 1.75rem;
     text-align: left;
   }
@@ -173,13 +180,13 @@ h1, h2 {
   }
 }
 
-@media (min-width: 1500px) {
+@media (min-width: 1300px) {
   .name {
     top: 15rem;
     font-size: 5rem;
   }
 
-  .about-me h2 {
+  h2 {
     font-size: 3.25rem;
   }
 
