--- a/style.css
+++ b/style.css
@@ -22,7 +22,9 @@ h2 {
   padding: 25px 0 100px;
 }
 
-.container, .projects-container {
+.container, 
+.projects-container, 
+.contact-me {
   width: 90%;
   max-width: 1200px;
   margin: 0 auto;
@@ -56,7 +58,8 @@ h2 {
 }
 
 h2,
-.icons {
+.icons,
+.footer-icons {
   text-align: center;
 }
 
@@ -145,6 +148,49 @@ h3 {
 .inner-div-two > p {
   margin-top: 1rem;
   color: #0000009c;
+}
+
+.footer {
+  background: #06b6d4;
+  padding-top: 1rem;
+}
+
+.contact-me {
+  color: #FFF;
+}
+
+.contact-me p:nth-of-type(1) {
+  font-size: 1.3125rem;
+  margin: .5rem 0 1.75rem;
+}
+
+.contact-me p:nth-of-type(2) {
+  margin-bottom: 1.75rem;
+}
+
+.contact-me p:nth-of-type(3) {
+  margin-bottom: .5rem;
+}
+
+.contact-me p:nth-of-type(3) > i,
+.contact-me p:nth-of-type(4) > i {
+  display: none;
+}
+
+.footer-icons {
+  margin: 1.5rem 0 4rem;
+}
+
+.footer-icons a {
+  font-size: 2.5rem;
+  color: #000;
+  text-decoration: none;
+  margin-right: 1rem;
+}
+
+.footer img {
+  width: 100%;
+  display: block;
 }
 
 @media (min-width: 460px) {
