--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ h3 {
   .name {
     font-size: 3.25rem;
     top: -7.5%;
-    left: 45%;
+    left: 40%;
     width: 105%;
   }
 
@@ -288,6 +288,37 @@ h3 {
 
   h3 {
     margin-left: 0;
+  }
+
+  .footer {
+    padding: 50px 0 100px;
+  }
+
+  .footer-container {
+    display: flex;
+    gap: 1rem;
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .contact-me h2,
+  .footer-icons {
+    text-align: left;
+  }
+
+  .contact-me p {
+    font-size: 1.3125rem;
+  }
+
+  .contact-me p:nth-of-type(3) > i,
+  .contact-me p:nth-of-type(4) > i {
+    display: inline-block;
+    margin-right: 1rem;
+  }
+
+  .footer img {
+    display: inline;
+    max-width: 275px;
   }
 }
 
