--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ h3 {
   margin-bottom: 1.75rem;
 }
 
-.contact-me p:nth-of-type(3) {
+.contact-me a p:nth-of-type(3) {
   margin-bottom: .5rem;
 }
 
@@ -306,8 +306,9 @@ h3 {
     text-align: left;
   }
 
-  .contact-me p {
-    font-size: 1.3125rem;
+  .contact-me p,
+  .contact-me p:nth-of-type(1) {
+    font-size: 1rem;
   }
 
   .contact-me p:nth-of-type(3) > i,
@@ -316,9 +317,13 @@ h3 {
     margin-right: 1rem;
   }
 
+  .footer-img-container {
+    align-self: center;
+    max-width: 400px;
+  }
+
   .footer img {
     display: inline;
-    max-width: 275px;
   }
 }
 
@@ -407,6 +412,47 @@ h3 {
 
   h3 {
     margin-left: 0;
+  }
+
+  .footer {
+    padding: 50px 0;
+  }
+
+  .footer-container {
+    display: flex;
+    gap: 1rem;
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  .contact-me h2,
+  .footer-icons {
+    text-align: left;
+  }
+
+  .contact-me p,
+  .contact-me p:nth-of-type(1) {
+    font-size: 1rem;
+  }
+
+  .contact-me p:nth-of-type(3) > i,
+  .contact-me p:nth-of-type(4) > i {
+    display: inline-block;
+    margin-right: 1rem;
+  }
+
+  .footer-icons a {
+    font-size: 1.75rem;
+  }
+
+  .footer-img-container {
+    align-self: center;
+    max-width: 600px;
+  }
+
+  .footer img {
+    display: inline;
   }
 }
 
